# pcl-opencv-yolo

./: Article 2 - What Students Are Saying about ChatGPT (1).docx  README.md  click.py  image_process.py
2024winterCamp/: answerSheet.py
2025_1th/: 1th.py  cv_tools.py
Bilibili_Human-machine/: bilibili.py
PCL/: pcl.cpp
curve_fitting/: curve_fitting.py
detection_system_pro _max/: detection_system_pro.py  detection_system_pro_max.py
detection_system_pro_max/: Patrol_line_system.py  detect_system_superVersion.py  detection_system.py  detection_system_pro_max.py
perspective_transform/: perspective_transform.py
point_detect/: CMakeLists.txt  package.xml
point_detect/msg/: LidarBallPosition.msg
point_detect/src/: livox_to_pointcloud2.cpp  point_detect_node.cpp  point_detect_node1.cpp
shape_detect/: 1.py
study/cardIdentity/: cardIdentity.py
study/perspective_transform/: perspective_transform.py
study/python1/: print.py
the-3th-fly/: box.py
vision_2025_1th/: CMakeLists.txt  package.xml  setup.cfg  setup.py
vision_2025_1th/scripts/: cv_tools.py
